config/profile/rhdh/default-config/flavours/lightspeed/deployment.yaml
apiVersion: apps/v1
kind: Deployment
spec:
  template:
    spec:
      containers:
        # Lightspeed Core Backend
        - name: lightspeed-core
          image: quay.io/lightspeed-core/lightspeed-stack:0.6.4
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: lcs-backend
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 512Mi
            limits:
              cpu: 1000m
              memory: 2Gi
          volumeMounts:
            - mountPath: /tmp/data/feedback
              name: shared-storage
            - mountPath: /rag-content
              name: rag-data-volume
            - mountPath: /tmp              # Add this to make /tmp writable
              name: temp

      volumes:
        - name: shared-storage
          emptyDir: { }
        - name: rag-data-volume
          emptyDir: { }
